@@ -2,6 +2,7 @@
 
 * Iridium: Enable reference transactions for authorize [ntalbott]
 * Litle: Add support for passing optional fields in token based transactions [forest]
+* Add Finansbank gateway [scamurcuoglu]
 
 == Version 1.31.1 (February 25, 2013)
 
